# botdogs-scout

./: .env  .flutter-plugins  .flutter-plugins-dependencies  CMakeLists.txt  Cargo.toml  README.md  package-lock.json  package.json  pubspec.yaml  start.sh  test.html
.cache/clangd/index/: TBA.h.DBCF351232187B22.idx  TBA.hpp.D077BD8C88BDF9B2.idx  main.cpp.99C3F18727C80D72.idx
API/: RestfulAPI.h  TBA.h  TBA.hpp
Matlab/: compile_commands.json  data_separation.asv  data_separation.m  matches-midwest.csv  matches.json  outCSV.csv  output.json  testData.csv  testData.json
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart  themes.dart
lib/about/: about.dart
lib/auth/: auth.dart
lib/guest/: guest.dart
lib/home/: home.dart
lib/pit/: pitScout.dart
lib/setup/: setup.dart
lib/shared/: teamData.dart
lib/stats/: stats.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: app.rs  db.rs  lib.rs  main.cpp  main.rs
src/lib/: navbar.rs  tba.rs
src/pages/auth/: auth.rs  login.rs
src/pages/home/: home.rs  info.rs
src/pages/my_team/: my_team.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
